src/Components/Home/Home.css
/* HOME STYLING */

.hero-image {
  background-image: url("./../../assets/hero-image.png");
  height: 60vh;
  background-position: top;
  background-repeat: no-repeat;
  background-size: cover;
  position: relative;
}

.hero-image h1 {
  font-size: 3em;
  line-height: 1em;
  letter-spacing: 0.05em;
  color: var(--cream);
  margin: 0;
  padding-top: 20vh;
  padding-bottom: 20px;
}

.button {
  text-decoration: none;
  font-weight: bold;
  background-color: transparent;
  color: var(--cream);
  border: 1px solid;
  border-color: var(--cream);
  padding: 15px 25px;
  margin: 0;
  font-size: 1em;
}

.button:hover {
  color: var(--pink);
  border-color: var(--pink);
}

/* TRENDING STYLING */

.trending {
  background-color: var(--base);
  margin: 0;
}

.trending h2 {
  margin: 0;
  padding: 25px;
  font-size: 2.5em;
  color: var(--cognac);
}

.trending h3 {
  font-size: 2em;
  margin: 10px;
  padding: 0px 10px;
  color: var(--base);
}

.trending h3:hover {
  color: var(--pink);
}

.category-link {
  text-decoration: none;
  display: flex;
  flex-wrap: wrap;
  flex-direction: row;
  justify-content: space-evenly;
  align-items: center;
  margin: 0 10%;
}

.trending-category {
  background-color: var(--green);
  width: 70%;
  height: 100px;
  margin-bottom: 20px;
  border: 2px solid;
  border-color: var(--pink);
}

/* INSTRUCTIONS STYLING */

.instructions {
  background-color: var(--green);
}

.instructions h2 {
  color: var(--cream);
  font-size: 3.5em;
  padding: 50px 0 0 0;
  margin-bottom: 40px;
}

.instructions span {
  font-family: Nesans;
}

.instructions-container {
  display: flex;
  justify-content: space-evenly;
  flex-direction: row;
  flex-wrap: wrap;
  margin: 0 2% 0 5%;
  padding-bottom: 55px;
}

.rule {
  position: relative;
  display: flex;
  background-color: var(--cream);
}

.rule h3 {
  position: absolute;
  color: var(--cream);
  font-size: 2em;
  background-color: var(--pink);
  border-radius: 100px;
  width: 70px;
  height: 70px;
  margin-left: -50px;
}

.instructions-container h4 {
  color: var(--pink);
  font-size: 1.5em;
  margin: auto;
  margin-top: -90px;
  padding: 5px;
}

/* ////////////////////////////////////RESPONSIVE DESIGN ////////////////////////////////////////////*/

@media only screen and (min-width: 768px) {
  .hero-image {
    height: 100vh;
  }

  .hero-image h1 {
    font-size: 5.5em;
    padding-top: 40vh;
    padding-bottom: 50px;
  }

  .button {
    font-size: 1.5em;
  }

  .trending {
    height: 60vh;
  }

  .trending h2 {
    padding: 65px;
    font-size: 3em;
  }

  .trending h3 {
    margin: 50px auto;
    font-size: 2.5em;
    padding: 0px 40px;
  }

  .category-container {
    margin: 0 10%;
  }

  .trending-category {
    width: 30%;
    height: 200px;
    margin-bottom: 50px;
  }

  .rule {
    width: 300px;
    height: 150px;
    padding: 20px;
    margin: 10px;
  }

  .rule h3 {
    font-size: 3em;
    left: 15px;
    top: -40px;
  }

  .rule h4 {
    font-size: 2em;
    margin: 40px 15px;
  }
}

@media only screen and (min-width: 1024px) {
  .trending-category {
    width: 30%;
  }
}

